0.1724
    - sqlfilter option is renamed to after_build_sql, sqlfilter is DEPRECATED!
    - removed EXPERIMENTAL flag from DBIx::Custom::Mapper
    - removed EXPERIMENTAL flag from the following DBIx::Custom methods
    insert_timestamp, mapper, update_timestamp
    - removed EXPERIMENTAL flag from the following DBIx::Custom method's option
    timestamp, 
0.1723
    - removed EXPERIMENTAL call_dbi method from DBIx::Custom::Model
    - removed EXPERIMENTAL map_param method from DBIx::Custom
    - removed EXPERIMENTAL the following methods from DBIx::Custom::Where
      if, map
    - removed EXPERIMENTAL flag from the following DBIx::Custom::Model methods
      count, execute
    - removed EXPERIMENTAL flag from the following DBIx::Custom::Result mehotds
      filter_on, type_rule, type_rule_off, type_rule_on, type_rule1_off,
      type_rule1_on, type_rule2_off, type_rule2_on
    - removed EXPERIMENTAL flag from the following DBIx::Custom method's options
      sqlfilter, type_rule_off, type_rule1_off, type_rule2_off,
      table_alias, wrap
    - removed EXPERIMENTAL flag from DBIx::Custom::Order
    - removed EXPERIMETNAL flag from the following DBIx::Custom methods
      exclude_table, user_column_info,
      user_table_info, available_datatype, available_typename,
      assign_param, count, get_column_info, get_table_info
      order, show_datatype, show_typename methods, show_tables, type_rule,
    - added EXPERIMENTAL update_timestamp method to DBIx::Custom
    - added EXPERIMENTAL insert_timestamp method to DBIx::Custom
    - removed EXPERIMENTAL timestamp attribute from DBIx::Custom
0.1722
    - added EXPERIMENTAL timestamp option to DBIx::Custom insert
      and update method.
    - added EXPERIMENTAL timestamp attribute to DBIx::Custom
    - added {KEY => {OPTION_KEY => OPTION_VALUE} syntax
      to EXPERIMENTAL DBIx::Custom::Mapper map method
    - added {KEY => sub { VALUE }} syntax
      to EXPERIMETNAL DBIx::Custom::Mapper map method