@@ -1,55 +1,0 @@
-# Download
-http://download.oracle.com/otn/linux/oracle10g/xe/10201/oracle-xe-univ-10.2.0.1-1.0.i386.rpm
-
-# Install
-rpm -ivh oracle-xe-univ-10.2.0.1-1.0.i386.rpm
-/etc/init.d/oracle-xe configure
-
-# Note
-Port number is set to 8090
-
-# HTTP access
-http://127.0.0.1:8090/apex
-
-# Create user
-id: dbix_custom
-password: dbix_custom
-
-Add all privirage
-
-# DBD::Oracle
-You must be install install client
-oracle-instantclient11.2-basic-11.2.0.2.0.i386.rpm
-oracle-instantclient11.2-devel-11.2.0.2.0.i386.rpm
-oracle-instantclient11.2-sqlplus-11.2.0.2.0.i386.rpm
-
-rpm -hiv oracle-instantclient11.2-basic-11.2.0.2.0.i386.rpm
-rpm -hiv oracle-instantclient11.2-devel-11.2.0.2.0.i386.rpm
-rpm -hiv oracle-instantclient11.2-sqlplus-11.2.0.2.0.i386.rpm
-
-vi /etc/profile.d/oracle.sh
-export ORACLE_HOME='/usr/lib/oracle/11.2/client'
-export C_INCLUDE_PATH='/usr/include/oracle/11.2/client'
-export LD_LIBRARY_PATH='/usr/lib/oracle/11.2/client/lib'
-
-vi /etc/ld.so.conf.d/oracle.conf
-/usr/lib/oracle/11.2/client/lib
-
-cpan DBD::Oracle
-
-sqlplus dbix_custom/dbix_custom@localhost:1521/XE
-
-mkdir -p $ORACLE_HOME/network/admin/
-vi $ORACLE_HOME/network/admin/tnsnames.ora
-
-XE =
-  (DESCRIPTION =
-    (ADDRESS_LIST =
-      (ADDRESS = (PROTOCOL = TCP)(HOST = localhost)(PORT = 1521))
-    )
-    (CONNECT_DATA =
-      (SID = orcl)
-    )
-  )
-
-
