@@ -1,13 +1,0 @@
-# Site
-http://awoni.net/fc/sql-server-2008-express/
-
-
-# Install
-http://www.microsoft.com/downloads/ja-jp/details.aspx?displaylang=ja&FamilyID=967225eb-207b-4950-91df-eeb5f35a80ee
-
-
-# Note
-You enable SQL Server authentication.
-You create user "dbix_custom", password "dbix_custom"
-You give create_table, insert, update, delete, select authority to user "dbix_custom".
-
